2006-06-06  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* src/kahua-server.scm (kahua-write-static-file): call make-director* before with-output-to-file.

2006-06-01  Katsutoshi Itoh <cut-sea@kahua.org>

	* bug fix for realize of kahua-proxy.
	  support dot pair.

2006-05-24  Katsutoshi Itoh <cut-sea@kahua.org>

	* src/kahua/server.scm
	a bit touch for define-session-object macro.
	delete a hole of anaphoric reference.

2006-05-23  Katsutoshi Itoh <cut-sea@kahua.org>

	* src/kahua/session.scm, src/kahua/server.scm
	* define new utility macro define-session-object.
	* add predicate kahua-sendable-object?, it used at
	  we can send that object to keyserver.
	
2006-05-22  Katsutoshi Itoh <cut-sea@kahua.org>

	* rewrite kahua-local-session-ref used by getter-with-setter.
	
2006-05-21  Katsutoshi Itoh <cut-sea@kahua.org>

	* src/kahua/session.scm, src/kahua/server.scm
	  hold app local session variable and the value.
	  At a result, add two new low level API named as
	  kahua-local-session-ref/kahua-local-session-set!.
	  This aim is that we hold non persistent object
	  and access it not only continuation link but also
	  permanent link.
	
2006-05-21  SHIBATA Tomohisa  <shibata@kahua.org>

	* doc/Modules
	start writing texinfo document.
	
2006-05-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* */Makefile.in:
	  bindir, sbindir, libexecdir, infodir, mandir now don't make
	  the deepest level "kahua" directory.
	  ex. bindir is now @bindir@ instead of @bindir@/kahua.

2006-05-13  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* 0.4.1 released.

2006-05-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* doc/Setup.ja:
	  Catch up recent changes.

	* emacs/kahua.el, emacs/kahua-shell.el:
	  Make customizable kahua-admin/kahua-shell command path
	  and process coding system for communication with them.

2006-05-12  Tatsuya BIZENN  <bizenn@arthub.net>

	* test/query.scm:
	  Avoid influence of other plugins.  Follow the fashion of test/plugin.scm.

	* test/persistence.scm, test/plugin.scm: